[gd_scene load_steps=4 format=3 uid="uid://darojuj7p35dl"]

[ext_resource type="Script" path="res://Script/puddle.gd" id="1_1ln3p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sjk6w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tlupr"]

[node name="CharacterBody2D" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 4
script = ExtResource("1_1ln3p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_sjk6w")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_tlupr")

[node name="Lifetime" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_body_exited"]
[connection signal="timeout" from="Lifetime" to="." method="_on_lifetime_timeout"]
